Apply background tab text contrast adjustment to themes that don't specify a background tab color or image.

Fixes a corner case where the background tab text contrast adjustments (CL 1173491) would not be applied if the theme didn't specify a background tab color or image.  The processing now falls back to the frame color to blend against in this case.

Bug: 877853
Change-Id: Ibad260a17369342067ff8088eb0215ab54af2b10
Reviewed-on: https://chromium-review.googlesource.com/1195818
Commit-Queue: Ryan Meier <rameier@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587397}
Former-commit-id: 2e6328219520d9e2f3a96aa22236e50cc8008b11